--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="https://drive.google.com/file/d/1H2aT9ZSWfENau8RgwCEp_rOL_QmCGiSf/view?usp=drive_link" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TeamPaper</title>
   </head>
